syntax = "proto3";

package events;

option go_package = "./events;events";

service EventService {
    // Unary RPC for sending a single event
    rpc SendEvent (EventRequest) returns (EventResponse);

    // Server-side streaming RPC for streaming events
    rpc StreamEvents (EventStreamRequest) returns (stream EventResponse);
}

message EventResponse {
    string event_id = 1;
    string event_message = 2;
    int64 timestamp = 3;
}

message EventRequest {
    string status = 1;
    string event_id = 2;
}

message EventStreamRequest {
    string client_id = 1;
}