syntax = "proto3";

package grpc_events;

option go_package = "github.com/sandeepgoutele/golang-coding/grpc_events;grpc_events";

service EventService {
    // RPC method for sending an event
    rpc SendEvent (EventRequest) returns (EventResponse);
}

message EventRequest {
    string event_id = 1;
    string event_message = 2;
    int64 timestamp = 3;
}

message EventResponse {
    string status = 1;
}